Resolve "Dark mode missing for LC-MS viewer", Added Darkmode colors to WebViewJPanel

--- a/sirius_gui/src/main/resources/sirius/style-classic.css
+++ b/sirius_gui/src/main/resources/sirius/style-classic.css
@@ -12,4 +12,5 @@ html {
 
 body {
     font-size: 0.85em; /* That is your text's default font size. Here i chose 12px */
+    background-color: #d6d9df;
 }
